--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,3 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 
-add_executable(Client src/Main.cpp)
+set(SOURCE src/Main.cpp
+           src/StringHandler.cpp)
+
+set(HEADERS include/StringHandler.h)
+
+add_executable(Client ${SOURCE} ${HEADERS})
+
+target_include_directories(Client PUBLIC include/)
