--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
 
 set(SOURCE src/Main.cpp
-           src/StringHandler.cpp)
+           src/StringHandler.cpp
+           src/Summator.cpp)
 
-set(HEADERS include/StringHandler.h)
+set(HEADERS include/StringHandler.h
+            include/Summator.h)
 
 add_executable(Client ${SOURCE} ${HEADERS})
 
