--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.15)
 
 project(L2Mod)
 
-add_subdirectory(client)
+#add_subdirectory(client)
 add_subdirectory(server)
