--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 
+IF (UNIX)
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    find_package(Threads REQUIRED)
+ENDIF()
+
 set(SOURCE src/Main.cpp
            src/StringHandler.cpp
            src/Summator.cpp
@@ -11,5 +16,10 @@ set(HEADERS include/StringHandler.h
 
 add_executable(Client ${SOURCE} ${HEADERS})
 
-target_include_directories(Client PUBLIC include/ ./../include )
-target_link_libraries(Client PUBLIC wsock32 ws2_32)
+target_include_directories(Client PRIVATE include/)
+
+IF (WIN32)
+    target_link_libraries(Client PRIVATE wsock32 ws2_32)
+ELSE()
+    target_link_libraries(Client PRIVATE Threads::Threads)
+ENDIF()
